syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message UserMessage {
    message PKey {
        
        int64 message_number = 10; // SR Message Number (SR Guid)
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    string user_name = 100; // userConfig.userName
    DeliveryMode delivery_mode = 103;
    string contact_address = 106; // email address, phone #, or chat handle
    string subject = 109;
    string message = 112;
    SendReason send_reason = 115;
    string send_source = 118;
    DeliveryState delivery_state = 121;
    string delivery_error = 124;
    google.protobuf.Timestamp delivery_dttm = 127;
    string modified_by = 130; // user who last modified this recrd
    SysEnvironment modified_in = 133;
    google.protobuf.Timestamp timestamp = 136; // timestamp of last modification
}


